--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
                 <li class="nav-item" *ngIf="!user.isLoggedIn()">
                     <a class="nav-link" routerLink="/auth/register">Register</a>
                 </li>
-                <li class="nav-item" >
+                <li class="nav-item" *ngIf="user.isLoggedIn()">
                     <a class="nav-link" routerLink="/dashboard">Dashboard</a>
                 </li>
                 <li class="nav-item" *ngIf="user.isLoggedIn()">
