--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -32,7 +32,7 @@
                                 <div class="col-sm-12" *ngIf="!_formErrors.password.valid">
                                     <span class="help-block help-block-error">{{_formErrors.password.message}}</span>
                                 </div>
-                                <div class="col-sm-12">
+                                <div class="col-sm-12" *ngIf="!_formErrors.password.valid">
                                     <p class="help-text">* Password must be more than 6 characters.</p>
                                 </div>
                             </div>
@@ -62,7 +62,7 @@
                         <br />
                         <div class="row">
                             <div class="col-xs-6">
-                                <a routerLink="/" class="btn btn-link px-0">Back to Homepage</a>
+                                <a routerLink="/auth/login" class="btn btn-link px-0">Back to Login</a>
                             </div>
                         </div>
                     </div>
